--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "./lib/index.es.js",
   "browser": "./lib/index.js",
   "scripts": {
+    "prepublish": "rollup -c",
     "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
