--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "datepickerdate",
-  "version": "1.0.4",
+  "version": "1.0.10",
   "description": "A datepicker that gives you the dates you selected",
   "main": "lib/index.cjs.js",
   "module": "lib/index.esm.js",
-  "browser": "lib/index.js",
+  "umd": "lib/index.js",
   "style": "lib/index.css",
   "repository": {
     "type": "git",
@@ -14,8 +14,7 @@
     "lint": "eslint --fix src",
     "clean": "rimraf lib",
     "build": "rollup -c",
-    "prepare": "npm run clean && npm run lint",
-    "prepublishOnly": "npm run clean && npm run lint && npm run build"
+    "prepublish": "npm run clean && npm run lint && npm run build"
   },
   "keywords": [
     "npm",
@@ -51,12 +50,16 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.15.1",
     "eslint-plugin-standard": "^4.0.1",
-    "preact": "^10.0.0",
     "rimraf": "^3.0.0",
     "rollup": "^1.22.0",
+    "preact": "^10.0.0",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-terser": "^5.1.2"
+  },
+  "peerDependencies": {
+    "preact": "^10.0.0"
   }
 }
