--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "datepickerdate",
-  "version": "1.0.10",
+  "version": "1.1.0",
   "description": "A datepicker that gives you the dates you selected",
   "main": "lib/index.cjs.js",
   "module": "lib/index.esm.js",
   "umd": "lib/index.js",
-  "style": "lib/index.css",
   "repository": {
     "type": "git",
     "url": "https://github.com/kilgarenone/datepicker.git"
@@ -44,17 +43,21 @@
     "@babel/preset-env": "^7.6.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.15.1",
     "eslint-plugin-standard": "^4.0.1",
+    "preact": "^10.0.0",
+    "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
     "rollup": "^1.22.0",
-    "preact": "^10.0.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-filesize": "^6.2.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-terser": "^5.1.2"
