--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datepickerdate",
-  "version": "1.1.1",
-  "description": "A datepicker that gives you the dates you selected",
+  "version": "1.2.1",
+  "description": "A lightweight datepicker component for Preact",
   "main": "lib/index.cjs.js",
   "module": "lib/index.esm.js",
   "umd": "lib/index.js",
