--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,11 @@
         "varsIgnorePattern": "^h$"
       }
     ],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/no-unknown-property": [
+      "error",
+      { "ignore": ["class"] } // don't auto format these attrs
+    ]
   },
   "settings": {
     "react": {
