--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datepickerdate",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A lightweight datepicker component for Preact",
   "main": "lib/index.cjs.js",
   "module": "lib/index.esm.js",
@@ -13,6 +13,7 @@
     "lint": "eslint --fix src",
     "clean": "rimraf lib src/demo",
     "build": "rollup -c",
+    "test-build": "npm run clean && npm run build",
     "prepublish": "npm run clean && npm run lint && npm run build"
   },
   "keywords": [
